added main container

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- Start sidebar -->
       <div class="container-fluid">
         <div class="row">
-          <div class="sidebar">
+          <div class="sidebar col-md-3">
             <input
               type="search"
               class="form-control ds-input"
@@ -51,9 +51,13 @@
               >
             </div>
           </div>
-          <div class="col-sm-1"></div>
-          <div class="col-md-9 main">
-            <h1 class="page-header">Main</h1>
+          <div class="col-md-1"></div>
+          <div class="col-md-8 main border float-right">
+            <h1 class="page-header">Minneapolis</h1>
+            <p>Temperature:</p>
+            <p>Humidity:</p>
+            <p>Wind Speed (MPH):</p>
+            <p>UV Index:</p>
           </div>
         </div>
       </div>
